--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
         <div class="button three">3</div>
         <div class="button four">4</div>
       </section>
+
+      <section class="all alltwo">
+        <div class="button five">5</div>
+        <div class="button six">6</div>
+        <div class="button seven">7</div>
+        <div class="button eight">8</div>
+      </section>
+
+      <section class="all allthree">
+        <div class="button nine">9</div>
+        <div class="button plus">+</div>
+        <div class="button minus">-</div>
+        <div class="button star">*</div>
+      </section>
     </main>
 
     <script src="script.js"></script>
