--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
       <section>
         <div class="display"></div>
       </section>
+
+      <section class="all allfive">
+        <div class="button clear">AC</div>
+        <div class="button delete">DEL</div>
+        <div class="button point">.</div>
+        <div class="button zero">0</div>
+      </section>
+
       <section class="all">
         <div class="button one">1</div>
         <div class="button two">2</div>
@@ -29,6 +37,13 @@
         <div class="button plus">+</div>
         <div class="button minus">-</div>
         <div class="button star">*</div>
+      </section>
+
+      <section class="all allfour">
+        <div class="button divide">/</div>
+        <div class="button percent">%</div>
+        <div class="button zeros">00</div>
+        <div class="button equals">=</div>
       </section>
     </main>
 
