--- a/index.html
+++ b/index.html
@@ -6,44 +6,46 @@
     <title>Return Values Clicked</title>
   </head>
   <body>
-    <main>
-      <section>
-        <div class="display"></div>
-      </section>
+    <main class="calculator">
+      <section class="calc">
+        <section>
+          <div class="display"></div>
+        </section>
 
-      <section class="all allfive">
-        <div class="button clear">AC</div>
-        <div class="button delete">DEL</div>
-        <div class="button point">.</div>
-        <div class="button zero">0</div>
-      </section>
+        <section class="all allfive">
+          <div class="button clear">AC</div>
+          <div class="button delete">DE</div>
+          <div class="button point">.</div>
+          <div class="button plus">+</div>
+        </section>
 
-      <section class="all">
-        <div class="button one">1</div>
-        <div class="button two">2</div>
-        <div class="button three">3</div>
-        <div class="button four">4</div>
-      </section>
+        <section class="all">
+          <div class="button one">1</div>
+          <div class="button two">2</div>
+          <div class="button three">3</div>
+          <div class="button minus">-</div>
+        </section>
 
-      <section class="all alltwo">
-        <div class="button five">5</div>
-        <div class="button six">6</div>
-        <div class="button seven">7</div>
-        <div class="button eight">8</div>
-      </section>
+        <section class="all alltwo">
+          <div class="button four">4</div>
+          <div class="button five">5</div>
+          <div class="button six">6</div>
+          <div class="button divide">/</div>
+        </section>
 
-      <section class="all allthree">
-        <div class="button nine">9</div>
-        <div class="button plus">+</div>
-        <div class="button minus">-</div>
-        <div class="button star">*</div>
-      </section>
+        <section class="all allthree">
+          <div class="button seven">7</div>
+          <div class="button eight">8</div>
+          <div class="button nine">9</div>
+          <div class="button star">*</div>
+        </section>
 
-      <section class="all allfour">
-        <div class="button divide">/</div>
-        <div class="button percent">%</div>
-        <div class="button zeros">00</div>
-        <div class="button equals">=</div>
+        <section class="all allfour">
+          <div class="button zero">0</div>
+          <div class="button zeros">00</div>
+          <div class="button percent">%</div>
+          <div class="button equals">=</div>
+        </section>
       </section>
     </main>
 
